--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,5 +3,5 @@
 <h1>Welcome to my site!</h1>
 <label>
 
-    I'm still getting things set up, but feel free to take a look a around!
+    I'm still getting things set up, but feel free to take a look around!
 </label>
