Minor Coloring Changes

--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -47,7 +47,7 @@ app {
 }
 
     .main .top-row {
-        background-color: #fff2;
+        background-color: #8882;
         box-shadow: 5px 5px 8px black;
     }
 
@@ -66,7 +66,7 @@ app {
     }
 
 .sidebar {
-    background-color: #fff2;
+    background-color: #8882;
     box-shadow: 5px 5px 8px black;
 }
 
