--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -166,7 +166,8 @@ app {
 @media (max-width: 767.98px) {
 
     html, body {
-       background-attachment: fixed; 
+       background-attachment: fixed;
+       background-size: cover;
     }
 
     .main .content {
